--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Goreleaser publish
         uses: goreleaser/goreleaser-action@v1
         with:
-          version: v0.134.0
+          version: latest
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
