--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -11,14 +11,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Unshallow clone
         run: git fetch --prune --unshallow
-      - name: Install Go 1.16
+      - name: Install Go 1.18
         uses: actions/setup-go@v2
         with:
-          go-version: '1.16.x'
+          go-version: '1.18.x'
       - name: Goreleaser publish
         uses: goreleaser/goreleaser-action@v1
         with:
-          version: v0.134.0
+          version: latest
           args: release --rm-dist --config=.goreleaser.prelease.yml
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
