--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   push:
     tags: [ "v*.*.*" ] # only a valid semver tag
 
-jobs:    
+jobs:
   goreleaser:
     runs-on: macos-latest
     steps:
@@ -22,3 +22,9 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
+      - name: Chocolatey Package Deployment
+        run: |
+          CURRENT_TAG=$(pulumictl get version --language generic -o)
+          pulumictl create choco-deploy -a pulumictl ${CURRENT_TAG}
+        env:
+          GITHUB_TOKEN: ${{ secrets.PULUMI_BOT_TOKEN}}
