--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,3 +15,7 @@ jobs:
           go-version: '1.18.x'
       - name: Run tests
         run: go test ./...
+      - name: Install and run
+        run: |
+          make install
+          pulumictl convert-version -v 0.0.1+dev -l python
