--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,6 +5,7 @@ on:
       - master
 jobs:    
   tests:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,3 +20,6 @@ jobs:
         run: |
           make install
           pulumictl convert-version -v 0.0.1+dev -l python
+  lint:
+    name: Lint
+    uses: ./.github/workflows/stage-lint.yml
