--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,17 +5,21 @@ on:
       - master
 jobs:    
   tests:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Go 1.18
-        uses: actions/setup-go@v2
+        uses: actions/checkout@v4
+      - name: Install Go 1.21
+        uses: actions/setup-go@v4
         with:
-          go-version: '1.18.x'
+          go-version: '1.21.x'
       - name: Run tests
         run: go test ./...
       - name: Install and run
         run: |
           make install
           pulumictl convert-version -v 0.0.1+dev -l python
+  lint:
+    name: Lint
+    uses: ./.github/workflows/stage-lint.yml
