--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           go-version: '1.21.x'
       - name: Run tests
-        run: go test ./...
+        run: make test
       - name: Install and run
         run: |
           make install
