--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Goreleaser publish
         uses: goreleaser/goreleaser-action@v1
         with:
-          version: latest
+          version: v1.26.2
           args: release --rm-dist --config=.goreleaser.prelease.yml
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
