--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Goreleaser publish
         uses: goreleaser/goreleaser-action@v1
         with:
-          version: latest
+          version: v1.26.2
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.PULUMI_BOT_TOKEN }}
