--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,22 @@
+permissions: write-all # Equivalent to default permissions plus id-token: write
+env:
+  ESC_ACTION_OIDC_AUTH: true
+  ESC_ACTION_OIDC_ORGANIZATION: pulumi
+  ESC_ACTION_OIDC_REQUESTED_TOKEN_TYPE: urn:pulumi:token-type:access_token:organization
+  ESC_ACTION_ENVIRONMENT: imports/github-secrets
+  ESC_ACTION_EXPORT_ENVIRONMENT_VARIABLES: false
 name: release
 on:
   push:
-    tags: [ "v*.*.*" ] # only a valid semver tag
+    tags: ["v*.*.*"]
 
 jobs:
   goreleaser:
     runs-on: macos-latest
     steps:
+      - name: Fetch secrets from ESC
+        id: esc-secrets
+        uses: pulumi/esc-action@v1
       - name: Checkout
         uses: actions/checkout@v4
       - name: Unshallow clone
@@ -21,11 +31,11 @@ jobs:
           version: v1.26.2
           args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.PULUMI_BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.esc-secrets.outputs.PULUMI_BOT_TOKEN }}
       - name: Chocolatey Package Deployment
         run: |
           make install
           CURRENT_TAG=$(pulumictl get version --language generic -o)
           pulumictl create choco-deploy -a pulumictl ${CURRENT_TAG}
         env:
-          GITHUB_TOKEN: ${{ secrets.PULUMI_BOT_TOKEN}}
+          GITHUB_TOKEN: ${{ steps.esc-secrets.outputs.PULUMI_BOT_TOKEN}}
